--- a/app/src/main/res/layout/partido_layout_list.xml
+++ b/app/src/main/res/layout/partido_layout_list.xml
@@ -67,7 +67,7 @@
         <ImageView
             android:id="@+id/ivEditar"
             android:layout_width="22dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:adjustViewBounds="false"
             android:scaleType="fitXY"
             app:srcCompat="@drawable/ic_menu_list" />
